--- a/detail.html
+++ b/detail.html
@@ -47,10 +47,10 @@
           </ul>
           <ul class="navbar-nav ms-auto">
             <li class="nav-item border-end">
-              <a class="nav-link fw-bold" href="#">Login</a>
+              <a class="nav-link fw-bold" href="./login.html">Login</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link fw-bold" href="#">Register</a>
+              <a class="nav-link fw-bold" href="./regist.html">Register</a>
             </li>
           </ul>
         </div>
