--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
           </ul>
           <ul class="navbar-nav ms-auto">
             <li class="nav-item border-end">
-              <a class="nav-link fw-bold" href="#">Login</a>
+              <a class="nav-link fw-bold" href="./login.html">Login</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link fw-bold" href="#">Register</a>
+              <a class="nav-link fw-bold" href="./regist.html">Register</a>
             </li>
           </ul>
         </div>
@@ -272,7 +272,7 @@
                       <p class="card-text small text-danger fw-bold"><i class="bi bi-basket2"></i> 0,5 kg/pack</p>
                       <p>Rp 100.000</p>
                       <div class="d-grid gap-2">
-                        <a href="#" class="btn btn-danger mt-3">Pesan</a>
+                        <a href="./detail.html" class="btn btn-danger mt-3">Pesan</a>
                       </div>
                     </div>
                   </div>
@@ -285,7 +285,7 @@
                       <p class="card-text small text-danger fw-bold"><i class="bi bi-basket2"></i> 0,5 kg/pack</p>
                       <p>Rp 100.000</p>
                       <div class="d-grid gap-2">
-                        <a href="#" class="btn btn-danger mt-3">Pesan</a>
+                        <a href="./detail.html" class="btn btn-danger mt-3">Pesan</a>
                       </div>
                     </div>
                   </div>
@@ -298,7 +298,7 @@
                       <p class="card-text small text-danger fw-bold"><i class="bi bi-basket2"></i> 0,5 kg/pack</p>
                       <p>Rp 100.000</p>
                       <div class="d-grid gap-2">
-                        <a href="#" class="btn btn-danger mt-3">Pesan</a>
+                        <a href="./detail.html" class="btn btn-danger mt-3">Pesan</a>
                       </div>
                     </div>
                   </div>
@@ -311,7 +311,7 @@
                       <p class="card-text small text-danger fw-bold"><i class="bi bi-basket2"></i> 0,5 kg/pack</p>
                       <p>Rp 100.000</p>
                       <div class="d-grid gap-2">
-                        <a href="#" class="btn btn-danger mt-3">Pesan</a>
+                        <a href="./detail.html" class="btn btn-danger mt-3">Pesan</a>
                       </div>
                     </div>
                   </div>
@@ -324,7 +324,7 @@
                       <p class="card-text small text-danger fw-bold"><i class="bi bi-basket2"></i> 0,5 kg/pack</p>
                       <p>Rp 100.000</p>
                       <div class="d-grid gap-2">
-                        <a href="#" class="btn btn-danger mt-3">Pesan</a>
+                        <a href="./detail.html" class="btn btn-danger mt-3">Pesan</a>
                       </div>
                     </div>
                   </div>
