--- a/keranjang.html
+++ b/keranjang.html
@@ -117,8 +117,8 @@
         <div class="row">
           <div class="col">
             <div class="d-grid gap-2 d-md-flex justify-content-md-end">
-              <button class="btn btn-danger me-md-2" type="button">Tambah Pesanan</button>
-              <button class="btn btn-warning" type="button">Checkout</button>
+              <a href="./kategori.html" class="btn btn-danger me-md-2" type="button">Tambah Pesanan</a>
+              <a href="./form_step.html" class="btn btn-warning" type="button">Checkout</a>
             </div>
           </div>
         </div>
