edit responsife form

--- a/form_step.html
+++ b/form_step.html
@@ -56,7 +56,7 @@
                     </div>
                   </div>
                   <div class="row justify-content-center">
-                    <div class="col-5 img-form border-end pe-5">
+                    <div class="col-lg-5 img-form border-end pe-5">
                       <div class="card-ayam">
                         <a href="#"><img src="./assets/img/terlaris/raw-board-breast-cutting-fresh-removebg-preview.png" class="card-img-top lazyload" alt="..." /></a>
                         <div class="card-body text-start">
@@ -68,7 +68,7 @@
                         </div>
                       </div>
                     </div>
-                    <div class="col-md-5 ps-5">
+                    <div class="col-lg-5 input-col ps-5">
                       <div class="mb-3">
                         <label for="exampleInputEmail1" class="form-label">Nama penerima</label>
                         <input type="text" class="form-control" aria-label="Username" aria-describedby="basic-addon1" />
@@ -92,7 +92,7 @@
                     </div>
                   </div>
                   <div class="row justify-content-center">
-                    <div class="col-5 img-form border-end pe-5">
+                    <div class="col-lg-5 img-form border-end pe-5">
                       <div>
                         <p>Transfer pembayaran</p>
                         <p>Total: <span class="fw-bold">Rp 99.999</span></p>
@@ -118,7 +118,7 @@
                         </div>
                       </div>
                     </div>
-                    <div class="col-md-5 ps-5">
+                    <div class="col-md-5 input-col ps-5">
                       <div class="mb-3">
                         <label class="form-label">Upload Bukti Transfer</label>
                         <input type="file" class="form-control" id="inputGroupFile02" />
