--- a/regist.html
+++ b/regist.html
@@ -48,11 +48,11 @@
                 <input type="email" placeholder="Email address" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" />
               </div>
               <div class="input-group mb-3">
-                <div class="pe-2">
+                <div class="pe-2 mb-3">
                   <label for="exampleInputPassword1" class="form-label">Kata Sandi</label>
                   <input type="password" placeholder="Password" class="form-control" id="exampleInputPassword1" />
                 </div>
-                <div>
+                <div class="mb-3">
                   <label for="exampleInputPassword1" class="form-label">Konfirmasi Kata Sandi</label>
                   <input type="password" placeholder="Password" class="form-control" id="exampleInputPassword1" />
                 </div>
