--- a/regist.html
+++ b/regist.html
@@ -44,18 +44,16 @@
                 </div>
               </div>
               <div class="mb-3">
-                <label for="exampleInputEmail1" class="form-label">Email address</label>
-                <input type="email" placeholder="Email address" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" />
+                <label class="form-label">Email address</label>
+                <input type="email" placeholder="Email address" class="form-control" aria-describedby="emailHelp" />
               </div>
-              <div class="input-group mb-3">
-                <div class="pe-2 mb-3">
-                  <label for="exampleInputPassword1" class="form-label">Kata Sandi</label>
-                  <input type="password" placeholder="Password" class="form-control" id="exampleInputPassword1" />
-                </div>
-                <div class="mb-3">
-                  <label for="exampleInputPassword1" class="form-label">Konfirmasi Kata Sandi</label>
-                  <input type="password" placeholder="Password" class="form-control" id="exampleInputPassword1" />
-                </div>
+              <div class="pe-2 mb-3">
+                <label class="form-label">Kata Sandi</label>
+                <input type="password" placeholder="Password" class="form-control" />
+              </div>
+              <div class="mb-3">
+                <label class="form-label">Konfirmasi Kata Sandi</label>
+                <input type="password" placeholder="Password" class="form-control" />
               </div>
               <div class="d-grid gap-2">
                 <button class="btn btn-primary py-2" type="button">Registrasi</button>
