--- a/form_step.html
+++ b/form_step.html
@@ -29,7 +29,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg py-3 navbar-light">
       <div class="container">
-        <a class="navbar-brand mx-auto" href="#"><img src="./assets/img/navbar/logo_navbar.png" alt="" /></a>
+        <a class="navbar-brand mx-auto" href="./index.html"><img src="./assets/img/navbar/logo_navbar.png" alt="" /></a>
       </div>
     </nav>
     <!-- Navbar End -->
